# sharpy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: sharpening.rs
examples/: basic.rs  builder.rs  compare_methods.rs  presets.rs
plan/: gpu_support.md  todo-clarity.md
plan/gui_demo/: 00_index.md  01_architecture.md  02_ui_and_state.md  03_preview_pipeline.md  04_io_dragdrop.md  05_implementation_phases.md  06_acceptance_testing.md  ignored.md
sharpy-gui/: Cargo.toml  README.md
sharpy-gui/src/: app.rs  main.rs  preview.rs  state.rs  ui.rs
src/: builder.rs  lib.rs  operations.rs  sharpening.rs  utils.rs
tests/: integration_test.rs
