[package]
name = "sharpy-gui"
version = "0.2.0"
edition = "2021"
authors = ["Max Enko <max@bigmail.one>"]
description = "Optional desktop demo for the sharpy image-sharpening library"
license = "MIT"
publish = false

[dependencies]
sharpy = { path = ".." }
image = "0.25"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.34", features = ["all_loaders"] }
rfd = "0.15"
